views, templates, url

--- a/templates/global/layout.html
+++ b/templates/global/layout.html
@@ -57,6 +57,9 @@
     <!-- Restaurateur JavaScript -->
     <script src="{% static 'global/script.js' %}"></script>
 
+    <!-- marked.js for rendering MarkDown content -->
+    <script src="{% static 'global/marked.js' %}"></script>
+
     <!-- Extra app level JavaScript -->
     {% block app_scripts %}
     {% endblock app_scripts %}
