--- a/browse/templates/browse/index.html
+++ b/browse/templates/browse/index.html
@@ -3,36 +3,34 @@
 {% block title %}{{ block.super }} | Browse{% endblock title %}
 
 {% block content %}
-  <div class="jumbotron">
+  <div class="jumbotron text-center">
     <h1>Browse</h1>
+    <p>Here are some popular restaurants on Restaurateur right now.</p>
+    <p>
+      Narrow restaurants by <input type='number' placeholder='ZIP'><input type='submit'>
+    </p>
   </div>
 
   <div class="row">
-    {% if posts %}
-      {% for post in posts %}
-        <div class="col-sm-6 col-lg-4">
-          <h2>{{ post.title }}</h2>
-          <p>{{ post.content }}</p>
+    {% if restaurants %}
+      {% for r in restaurants %}
+        <div class="col-sm-6 col-lg-4 text-center">
+          <h2>
+            <a href="{% url 'browse:restaurant' r.slug %}">{{ r.name }}</a>
+          </h2>
+          <p>{{ r.locations.count }} locations.</p>
+          <div class="row">
+            {% for l in r.locations.all|slice:":3" %}
+              <div class="col-xs-6 col-lg-4">
+                <a href="{% url 'browse:restaurant_location' r.slug l.id %}">{{ l.name }}</a>
+              </div>
+            {% endfor %}
+          </div>
+          <p>{{ r.plain_text_description }}</p>
         </div>
       {% endfor %}
     {% else %}
-      <div class="col-sm-6 col-lg-4">
-        <h2>Header One</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="col-sm-6 col-lg-4">
-        <h2>Header Two</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </div>
-      <div class="col-sm-6 col-lg-4">
-        <h2>Header Three</h2>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      </div>
-      <div class="col-sm-6 col-lg-4">
-        <h2>Header Four</h2>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
+      <div class='alert alert-warning'>An error has occurred.</div>
     {% endif %}
   </div>
-
 {% endblock content %}
