--- a/browse/templates/browse/category.html
+++ b/browse/templates/browse/category.html
@@ -4,8 +4,10 @@
 
 {% block content %}
   <div class="jumbotron text-center">
-    <h1>Browse</h1>
-    <p>Here are some popular restaurants on Restaurateur right now.</p>
+    <h1>{{ category.name }}</h1>
+    {% if category.plain_text_description != "" %}
+      <p>{{ category.plain_text_description }}</p>
+    {% endif %}
     <p>
       Narrow restaurants by <input class="text-center" type='number' placeholder='ZIP'><input type='submit'>
     </p>
