--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -15,12 +15,24 @@
     <div id="navbar" class="collapse navbar-collapse">
       {% block navbar %}
         <ul class="nav navbar-nav">
-          <li class=""><a class="nav-link" href="#">American</a></li>
-          <li class=""><a class="nav-link" href="#">Mexican</a></li>
-          <li class=""><a class="nav-link" href="#">Italian</a></li>
-          <li class=""><a class="nav-link" href="#">Asian</a></li>
-          <li class=""><a class="nav-link" href="#">Desserts</a></li>
-          <li class=""><a class="nav-link" href="#">Snacks</a></li>
+          {% if categories %}
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                {% for category in categories %}
+                  <li class=""><a class="nav-link" href="{% url 'browse:category' category.slug %}">{{ category.name|capfirst }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
+
+          {% else %}
+            <li class=""><a class="nav-link" href="#">American</a></li>
+            <li class=""><a class="nav-link" href="#">Mexican</a></li>
+            <li class=""><a class="nav-link" href="#">Italian</a></li>
+            <li class=""><a class="nav-link" href="#">Asian</a></li>
+            <li class=""><a class="nav-link" href="#">Desserts</a></li>
+          {% endif %}
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -28,19 +40,19 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
-                <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+                <li class=""><a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a></li>
+                <li class=""><a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a></li>
 
                 <!-- TODO: only show divider and staff section if user is in group staff -->
                 <li class="divider"></li>
-                <li><a href="{% url 'staff:index' %}">Staff</a></li>
-                <li><a href="#">My Mexican Restaurant</a></li>
-                <li><a href="#">My Italian Restaurant</a></li>
+                <li class=""><a class="nav-link" href="{% url 'staff:index' %}">Staff</a></li>
+                <li class=""><a class="nav-link" href="#">My Mexican Restaurant</a></li>
+                <li class=""><a class="nav-link" href="#">My Italian Restaurant</a></li>
 
                 <li class="divider"></li>
                 <li class="dropdown-header">Recently viewed</li>
-                <li><a href="#">Recent Restaurant</a></li>
-                <li><a href="#">Another Restaurant</a></li>
+                <li class=""><a class="nav-link" href="#">Recent Restaurant</a></li>
+                <li class=""><a class="nav-link" href="#">Another Restaurant</a></li>
               </ul>
             </li>
           {% else %}
