--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,19 +1,15 @@
-{% extends "accounts_app/layout.html" %}
-
-{% block style %}
-    <style>
-
-    </style>
-{% endblock style %}
+{% extends "accounts/base.html" %}
 
 {% block content %}
 
-    <p class='blue bold'>Successful Logout. Redirecting you to <a href="{% url 'pickem_app:index' %}">PickEm Home</a>.</p>
+    <div class='alert alert-info'>
+        <strong>Successful Logout.</strong> Redirecting you to <a href="{% url 'browse:index' %}">Restaurateur Home</a>.
+    </div>
 
 {% endblock content %}
 
 {% block script %}
     <script>
-        setTimeout(function(){location.assign("{% url 'pickem_app:index' %}")},2000)
+        setTimeout(function(){location.assign("{% url 'browse:index' %}")},2000)
     </script>
 {% endblock script %}
