--- a/browse/templates/browse/category.html
+++ b/browse/templates/browse/category.html
@@ -9,7 +9,8 @@
       <p>{{ category.plain_text_description }}</p>
     {% endif %}
     <p>
-      Narrow restaurants by <input class="text-center" type='number' placeholder='ZIP'><input type='submit'>
+      Narrow restaurants by <input class="text-center" type='number' placeholder='ZIP'>
+      <input type='submit'>
     </p>
   </div>
 
