--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -18,7 +18,7 @@
           {% if categories %}
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Browse by Category <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 {% for category in categories %}
                   <li class=""><a class="nav-link" href="{% url 'browse:category' category.slug %}">{{ category.name|capfirst }}</a></li>
